force-app/main/default/objects/Contact/fields/ABML_Aadhar_No__c.field-meta.xml
<CustomField>
    <fullName>ABML_Aadhar_No__c</fullName>
    <label>Aadhar No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>