force-app/main/default/objects/Contact/fields/ABML_Age__c.field-meta.xml
<CustomField>
    <fullName>ABML_Age__c</fullName>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>