force-app/main/default/objects/Contact/fields/ABML_Agent_Code__c.field-meta.xml
<CustomField>
    <fullName>ABML_Agent_Code__c</fullName>
    <externalId>true</externalId>
    <label>Agent Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>