force-app/main/default/objects/Contact/fields/ABML_Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>ABML_Alternate_Email__c</fullName>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>