force-app/main/default/objects/Contact/fields/ABML_Alternate_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>ABML_Alternate_Mobile_No__c</fullName>
    <label>Alternate Mobile No</label>
    <type>Phone</type>
</CustomField>