force-app/main/default/objects/Contact/fields/ABML_Available_Margin__c.field-meta.xml
<CustomField>
    <fullName>ABML_Available_Margin__c</fullName>
    <label>Available Margin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>