force-app/main/default/objects/Contact/fields/ABML_Available_Margin_Com__c.field-meta.xml
<CustomField>
    <fullName>ABML_Available_Margin_Com__c</fullName>
    <label>Available Margin Com</label>
    <length>50</length>
    <type>Text</type>
</CustomField>