force-app/main/default/objects/Contact/fields/ABML_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ABML_Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>