force-app/main/default/objects/Contact/fields/ABML_Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>ABML_Bank_Account_Type__c</fullName>
    <label>Bank Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>