force-app/main/default/objects/Contact/fields/ABML_Broker_Code__c.field-meta.xml
<CustomField>
    <fullName>ABML_Broker_Code__c</fullName>
    <externalId>true</externalId>
    <label>Broker Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>