force-app/main/default/objects/Contact/fields/ABML_BSE__c.field-meta.xml
<CustomField>
    <fullName>ABML_BSE__c</fullName>
    <label>BSE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>