force-app/main/default/objects/Contact/fields/ABML_Client_Branch_Franchisee__c.field-meta.xml
<CustomField>
    <fullName>ABML_Client_Branch_Franchisee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Branch/Franchisee</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>Please select business type of account</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Business Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>