force-app/main/default/objects/Contact/fields/ABML_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>ABML_Client_ID__c</fullName>
    <externalId>true</externalId>
    <label>Client ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>