force-app/main/default/objects/Contact/fields/ABML_Contact_Preference__c.field-meta.xml
<CustomField>
    <fullName>ABML_Contact_Preference__c</fullName>
    <label>Contact Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>