force-app/main/default/objects/Contact/fields/ABML_Contract_Mode__c.field-meta.xml
<CustomField>
    <fullName>ABML_Contract_Mode__c</fullName>
    <label>Contract Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>