force-app/main/default/objects/Contact/fields/ABML_Customer_Priority__c.field-meta.xml
<CustomField>
    <fullName>ABML_Customer_Priority__c</fullName>
    <label>Customer Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>