force-app/main/default/objects/Contact/fields/ABML_Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>ABML_Dealer_Name__c</fullName>
    <label>Dealer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>