force-app/main/default/objects/Contact/fields/ABML_Designation__c.field-meta.xml
<CustomField>
    <fullName>ABML_Designation__c</fullName>
    <label>Designation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>