force-app/main/default/objects/Contact/fields/ABML_Dormant_Segments__c.field-meta.xml
<CustomField>
    <fullName>ABML_Dormant_Segments__c</fullName>
    <label>Dormant Segments</label>
    <length>50</length>
    <type>Text</type>
</CustomField>