force-app/main/default/objects/Contact/fields/ABML_DP__c.field-meta.xml
<CustomField>
    <fullName>ABML_DP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DP Name</label>
    <referenceTo>ABML_DP__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>