force-app/main/default/objects/Contact/fields/ABML_DP_ID__c.field-meta.xml
<CustomField>
    <fullName>ABML_DP_ID__c</fullName>
    <label>DP ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>