force-app/main/default/objects/Contact/fields/ABML_DP_Name__c.field-meta.xml
<CustomField>
    <fullName>ABML_DP_Name__c</fullName>
    <label>DP Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>