force-app/main/default/objects/Contact/fields/ABML_Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>ABML_Employee_Code__c</fullName>
    <externalId>true</externalId>
    <label>Employee Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>