force-app/main/default/objects/Contact/fields/ABML_EXE_Privilege__c.field-meta.xml
<CustomField>
    <fullName>ABML_EXE_Privilege__c</fullName>
    <label>EXE Privilege</label>
    <length>50</length>
    <type>Text</type>
</CustomField>