force-app/main/default/objects/Contact/fields/ABML_Internet_Segment__c.field-meta.xml
<CustomField>
    <fullName>ABML_Internet_Segment__c</fullName>
    <label>Internet Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>