force-app/main/default/objects/Contact/fields/ABML_Investor_Type__c.field-meta.xml
<CustomField>
    <fullName>ABML_Investor_Type__c</fullName>
    <label>Investor Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>