force-app/main/default/objects/Contact/fields/ABML_Last_Trade_Date__c.field-meta.xml
<CustomField>
    <fullName>ABML_Last_Trade_Date__c</fullName>
    <label>Last Trade Date</label>
    <type>Date</type>
</CustomField>