force-app/main/default/objects/Contact/fields/ABML_Last_Trade_Date_COM__c.field-meta.xml
<CustomField>
    <fullName>ABML_Last_Trade_Date_COM__c</fullName>
    <label>Last Trade Date COM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>