force-app/main/default/objects/Contact/fields/ABML_Last_Trade_Date_EQ__c.field-meta.xml
<CustomField>
    <fullName>ABML_Last_Trade_Date_EQ__c</fullName>
    <label>Last Trade Date EQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>