force-app/main/default/objects/Contact/fields/ABML_Ledger_Balance_EQ__c.field-meta.xml
<CustomField>
    <fullName>ABML_Ledger_Balance_EQ__c</fullName>
    <label>Ledger Balance EQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>