force-app/main/default/objects/Contact/fields/ABML_LOA_Landline__c.field-meta.xml
<CustomField>
    <fullName>ABML_LOA_Landline__c</fullName>
    <label>LOA Landline</label>
    <type>Phone</type>
</CustomField>