force-app/main/default/objects/Contact/fields/ABML_LOA_Mobile__c.field-meta.xml
<CustomField>
    <fullName>ABML_LOA_Mobile__c</fullName>
    <label>LOA Mobile</label>
    <type>Phone</type>
</CustomField>