force-app/main/default/objects/Contact/fields/ABML_LOA_Name__c.field-meta.xml
<CustomField>
    <fullName>ABML_LOA_Name__c</fullName>
    <label>LOA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>