force-app/main/default/objects/Contact/fields/ABML_MCDX__c.field-meta.xml
<CustomField>
    <fullName>ABML_MCDX__c</fullName>
    <label>MCDX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>