force-app/main/default/objects/Contact/fields/ABML_MCX__c.field-meta.xml
<CustomField>
    <fullName>ABML_MCX__c</fullName>
    <label>MCX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>