force-app/main/default/objects/Contact/fields/ABML_MCXC__c.field-meta.xml
<CustomField>
    <fullName>ABML_MCXC__c</fullName>
    <label>MCXC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>