force-app/main/default/objects/Contact/fields/ABML_Mobile_Trading__c.field-meta.xml
<CustomField>
    <fullName>ABML_Mobile_Trading__c</fullName>
    <label>Mobile Trading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>