force-app/main/default/objects/Contact/fields/ABML_NSE__c.field-meta.xml
<CustomField>
    <fullName>ABML_NSE__c</fullName>
    <label>NSE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>