force-app/main/default/objects/Contact/fields/ABML_NSEC__c.field-meta.xml
<CustomField>
    <fullName>ABML_NSEC__c</fullName>
    <label>NSEC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>