force-app/main/default/objects/Contact/fields/ABML_NSEF__c.field-meta.xml
<CustomField>
    <fullName>ABML_NSEF__c</fullName>
    <label>NSEF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>