force-app/main/default/objects/Contact/fields/ABML_PAN__c.field-meta.xml
<CustomField>
    <fullName>ABML_PAN__c</fullName>
    <label>PAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>