force-app/main/default/objects/Contact/fields/ABML_POA__c.field-meta.xml
<CustomField>
    <fullName>ABML_POA__c</fullName>
    <label>POA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>