force-app/main/default/objects/Contact/fields/ABML_POA_Status__c.field-meta.xml
<CustomField>
    <fullName>ABML_POA_Status__c</fullName>
    <label>POA Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>