force-app/main/default/objects/Contact/fields/ABML_Primary_DP_ID__c.field-meta.xml
<CustomField>
    <fullName>ABML_Primary_DP_ID__c</fullName>
    <label>Primary DP ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>