force-app/main/default/objects/Contact/fields/ABML_Segment__c.field-meta.xml
<CustomField>
    <fullName>ABML_Segment__c</fullName>
    <label>Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>