force-app/main/default/objects/Contact/fields/ABML_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>ABML_Sensitive__c</fullName>
    <label>ABML Sensitive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sensitive</fullName>
                <isActive>false</isActive>
                <label>Not Sensitive</label>
            </value>
            <value>
                <fullName>Sensitive</fullName>
                <isActive>false</isActive>
                <label>Sensitive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>