force-app/main/default/objects/Contact/fields/ABML_Sensitive_Flag__c.field-meta.xml
<CustomField>
    <fullName>ABML_Sensitive_Flag__c</fullName>
    <formula>IF(ISPICKVAL(ABML_Sensitive__c, &quot;Yes&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 30, 30),
&quot;Not Sensitive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sensitive Flag</label>
    <type>Text</type>
</CustomField>