force-app/main/default/objects/Contact/fields/ABML_WelcomeCallStatus__c.field-meta.xml
<CustomField>
    <fullName>ABML_WelcomeCallStatus__c</fullName>
    <label>Welcome Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>OPEN</fullName>
            </value>
            <value>
                <fullName>CALLBACK-FOLLOWUP</fullName>
            </value>
            <value>
                <fullName>DEMO RESCHEDULED</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>