force-app/main/default/objects/Contact/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <description>This field is used in Multiply (Wellness) CRM</description>
    <label>BMI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>