force-app/main/default/objects/Contact/fields/Customer_Since__c.field-meta.xml
<CustomField>
    <fullName>Customer_Since__c</fullName>
    <description>The date-time when the B2C customer is created in Payment System.</description>
    <label>Customer Since</label>
    <type>DateTime</type>
</CustomField>