force-app/main/default/objects/Contact/fields/Driving_License__c.field-meta.xml
<CustomField>
    <fullName>Driving_License__c</fullName>
    <description>Field used to capture driving license number of the contact</description>
    <label>Driving License</label>
    <length>50</length>
    <type>Text</type>
</CustomField>