force-app/main/default/objects/Contact/fields/Driving_License_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Driving_License_Expiry__c</fullName>
    <description>This field is used to capture driving license expiry date</description>
    <label>Driving License Expiry</label>
    <type>Date</type>
</CustomField>