force-app/main/default/objects/Contact/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <description>This field is used to store the secondary email of the contact</description>
    <label>Additional Email</label>
    <type>Email</type>
</CustomField>