force-app/main/default/objects/Contact/fields/EmployeeDesignation__c.field-meta.xml
<CustomField>
    <fullName>EmployeeDesignation__c</fullName>
    <description>Used in Wellness</description>
    <label>Employee Designation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>