force-app/main/default/objects/Contact/fields/EmployerID__c.field-meta.xml
<CustomField>
    <fullName>EmployerID__c</fullName>
    <description>Used in Wellness</description>
    <label>Employer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>