force-app/main/default/objects/Contact/fields/EmployerName__c.field-meta.xml
<CustomField>
    <fullName>EmployerName__c</fullName>
    <description>Used in Wellness</description>
    <label>Employer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>