force-app/main/default/objects/Contact/fields/Father_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Name__c</fullName>
    <description>This field is used to capture the father&apos;s name</description>
    <label>Father Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>