force-app/main/default/objects/Contact/fields/GoldenID__c.field-meta.xml
<CustomField>
    <fullName>GoldenID__c</fullName>
    <description>Used in Wellness</description>
    <label>Golden ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>