force-app/main/default/objects/Contact/fields/HealthIDCardNumber__c.field-meta.xml
<CustomField>
    <fullName>HealthIDCardNumber__c</fullName>
    <description>Used in Wellness</description>
    <label>Health ID Card Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>