force-app/main/default/objects/Contact/fields/Heightcm__c.field-meta.xml
<CustomField>
    <fullName>Heightcm__c</fullName>
    <description>This field is used in Multiply (Wellness) CRM</description>
    <label>Height (cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>