force-app/main/default/objects/Contact/fields/Is_Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Permanent_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to identify whether the address is a permanent address or current address</description>
    <label>Is Permanent Address</label>
    <type>Checkbox</type>
</CustomField>