force-app/main/default/objects/Contact/fields/IsPED__c.field-meta.xml
<CustomField>
    <fullName>IsPED__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in Multiply (Wellness) CRM</description>
    <label>Is PED</label>
    <type>Checkbox</type>
</CustomField>