force-app/main/default/objects/Contact/fields/IsProfileCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsProfileCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in Multiply (Wellness) CRM</description>
    <label>Is Profile Completed</label>
    <type>Checkbox</type>
</CustomField>