force-app/main/default/objects/Contact/fields/IsProfileRewardAllocated__c.field-meta.xml
<CustomField>
    <fullName>IsProfileRewardAllocated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in Multiply (Wellness) CRM</description>
    <label>Is Profile Reward Allocated</label>
    <type>Checkbox</type>
</CustomField>