force-app/main/default/objects/Contact/fields/Maritual_Status__c.field-meta.xml
<CustomField>
    <fullName>Maritual_Status__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>....</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>