force-app/main/default/objects/Contact/fields/Marriage_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Marriage_Anniversary__c</fullName>
    <description>ABSLI Field</description>
    <label>Marriage Anniversary</label>
    <type>Date</type>
</CustomField>