force-app/main/default/objects/Contact/fields/MMICustomerID__c.field-meta.xml
<CustomField>
    <fullName>MMICustomerID__c</fullName>
    <description>Used in Wellness</description>
    <label>MMI Customer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>