force-app/main/default/objects/Contact/fields/Mobile_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_2__c</fullName>
    <description>This field is used to store secondary mobile</description>
    <label>Additional Mobile</label>
    <type>Phone</type>
</CustomField>