force-app/main/default/objects/Contact/fields/Mother_Maiden_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_Maiden_Name__c</fullName>
    <description>This field is used to store mother maiden name of the contact record</description>
    <label>Mother Maiden Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>