force-app/main/default/objects/Contact/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <description>This field is used to store nationality of the contact</description>
    <label>Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>