force-app/main/default/objects/Contact/fields/No_Of_Children__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Children__c</fullName>
    <description>This field is used to store no of children of the contact</description>
    <label>No. Of Children</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>