force-app/main/default/objects/Contact/fields/OptionalCover__c.field-meta.xml
<CustomField>
    <fullName>OptionalCover__c</fullName>
    <description>Used in Wellness</description>
    <label>OptionalCover</label>
    <length>100</length>
    <type>Text</type>
</CustomField>