force-app/main/default/objects/Contact/fields/Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Passport_No__c</fullName>
    <description>This field is used to store the passport number</description>
    <label>Passport No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>