force-app/main/default/objects/Contact/fields/PEDDetails__c.field-meta.xml
<CustomField>
    <fullName>PEDDetails__c</fullName>
    <description>This field is used in Multiply (Wellness) CRM</description>
    <label>PED Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>