force-app/main/default/objects/Contact/fields/PEKRN_Number__c.field-meta.xml
<CustomField>
    <fullName>PEKRN_Number__c</fullName>
    <label>PEKRN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>