force-app/main/default/objects/Contact/fields/Permanent_Addr_Flag__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Addr_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Permanent Addr Flag</label>
    <type>Checkbox</type>
</CustomField>