force-app/main/default/objects/Contact/fields/PersonBirthdate__c.field-meta.xml
<CustomField>
    <fullName>PersonBirthdate__c</fullName>
    <label>PersonBirthdate</label>
    <type>Date</type>
</CustomField>