force-app/main/default/objects/Contact/fields/Policy_Holder_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Type__c</fullName>
    <label>Policy Holder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Principle Member</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Member</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>