force-app/main/default/objects/Contact/fields/PreferredLanguage__c.field-meta.xml
<CustomField>
    <fullName>PreferredLanguage__c</fullName>
    <description>This field will be used in Wellness</description>
    <label>Preferred Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>