force-app/main/default/objects/Contact/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is default true when contact is created.</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>