force-app/main/default/objects/Contact/fields/Proposer__c.field-meta.xml
<CustomField>
    <fullName>Proposer__c</fullName>
    <description>Used for Wellness</description>
    <label>Proposer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>