force-app/main/default/objects/Contact/fields/Ration_Card_No__c.field-meta.xml
<CustomField>
    <fullName>Ration_Card_No__c</fullName>
    <description>This field is used to store the ration car number of the contact</description>
    <label>Ration Card No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>