force-app/main/default/objects/Contact/fields/Res_Status__c.field-meta.xml
<CustomField>
    <fullName>Res_Status__c</fullName>
    <label>Res Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>